# TibiaServer860

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  Restart.sh  config.dist.lua  config.lua.dist  docker-compose.yml
cmake/: FindGMP.cmake
compiler/: CMakeLists.txt
compiler/cmake/: FindLuaJIT.cmake
compiler/src/: CMakeLists.txt  configmanager.cpp  configmanager.h  connection.cpp  connection.h  const.h  container.cpp  container.h  creature.h  database.cpp  database.h  definitions.h  depotlocker.cpp  enums.h  game.cpp  iologindata.cpp  item.cpp  items.cpp  luascript.cpp  luascript.h  npc.cpp  npc.h  otserv.cpp  outputmessage.h  player.cpp  player.h  protocolgame.cpp  protocolgame.h  protocollogin.cpp  protocollogin.h  protocolspectator.cpp  protocolspectator.h  teleport.cpp  tools.cpp  weapons.cpp
compiler/vc17/: theforgottenserver.vcxproj
data/: global.lua
data/XML/: groups.xml  groups123.xml  outfits.xml  stages hard.xml  stages.xml  stages1.xml  stages2.xml  vocations.xml
data/actions/: actions.xml
data/chatchannels/: chatchannels.xml
data/creaturescripts/: creaturescripts.xml  (+1 more)
mods/: cleanhouses.xml
src/: CMakeLists.txt  configmanager.cpp  connection.cpp  connection.h  creature.cpp  creatureevent.cpp  database.cpp  database.h  databasemanager.cpp  databasemysql.cpp  databasemysql.h  definitions.h  enums.h  game.cpp  game.h  gameservers.cpp  luascript.cpp  luascript.h  map.cpp  npc.cpp  npc.h  otpch.h  otserv.cpp  otsystem.h  outputmessage.cpp  player.cpp  player.h  protocolgame.cpp  server.cpp  textlogger.cpp  tools.cpp  tools.h
(+1530 files in other folders)
